# ClipMatch

./: .flake8  .pylintrc  CHANGELOG.md  LICENSE  README.md  pyproject.toml
clipmatch/: __init__.py  clipmatch.py  perceptual_hasher.py
tests/: conftest.py  test_integration.py  test_perceptual_hasher.py  test_unit.py
