[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipmatch"
version = "0.1.0"
description = "Searches for similar video files by comparing hashes of their frames."
requires-python = ">=3.11"
authors = [
    {name = "Piotr Gawron", email = "gawron.pio@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["video", "similarity", "hash", "frames", "duplicate", "detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2.3.0",
    "opencv-python-headless>=4.11.0.86",
    "psutil>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/gawronpio/ClipMatch"
Repository = "https://github.com/gawronpio/ClipMatch.git"
Issues = "https://github.com/gawronpio/ClipMatch/issues"

[project.scripts]
clipmatch = "clipmatch.clipmatch:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clipmatch*"]

[tool.setuptools.package-data]
clipmatch = ["*.py"]
